Update objectgen to support creating .gitignore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -249,7 +249,7 @@ file(GLOB_RECURSE COMPILER_SRCS
     src/parser/*.cc
     src/printer/*.cc
     src/support/*.cc
-    src/relay2/*.cc
+    src/relax/*.cc
     )
 
 file(GLOB CODEGEN_SRCS
